--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 		
-		<title>Lawyers</title>
+		<title>Sima Roy Law Firm</title>
 		
 		<!-- Loading third party fonts -->
 		<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -29,10 +29,10 @@
 			<header class="site-header">
 				<div class="container">
 					<a href="index.html" id="branding">
-						<img src="images/logo.png" alt="Company Name" class="logo">
+						<img src="images/logo@2x.png" alt="Company Name" class="logo">
 						<div class="branding-copy">
-							<h1 class="site-title">Company Name</h1>
-							<small class="site-description">Tagline goes here</small>
+							<h1 class="site-title">Sima Roy Law Firm</h1>
+							<small class="site-description">Barrister, Solicitor & Notary Public</small>
 						</div>
 					</a>
 
@@ -55,12 +55,18 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-8">
-								<figure><img src="dummy/lawyers.jpg" alt=""></figure>
+								<figure><img src="dummy/Law-001.jpg" alt=""></figure>
 							</div>
 							<div class="col-md-4">
 								<div class="hero-content">
-									<h1 class="hero-title">Header Goes Here</h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi accusamus aut rerum sed maxime, magnam neque sapiente quidem</p>
+									<h1 class="hero-title">one Stop Solution for</h1>
+									<p><ul>
+										<li>Immigration Matters</li>
+										<li>Family Law Cases</li>
+										<li>Real Estate (Residential & Commercial)</li>
+										<li>Business & Corporate Law</li>
+										<li>Will & Estate</li>
+									</ul></p>
 									<a href="#" class="button">Read more</a>
 								</div>
 							</div>
